# reason_net

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data_gen/: Cargo.toml  data-grokking-addition.txt
data_gen/src/: main.rs
datasets/: data-100m-max4-add.txt
reason_net/: data.py  generate.py  llama.py  loss.py  model.py  module.py  pydantic_conf.py  run.py
reason_net/calllbacks/: norm_monitor.py  perf_monitor.py
reason_net/configs/: add-14m.yaml  add-4m.yaml  add-910k.yaml  add-small.yaml  all-14m.yaml  all-small.yaml  default.yaml  grokking-addition.yaml
reason_net/configs/module/model/: 100k.yaml  14M.yaml  2M.yaml  4M.yaml  70M.yaml  910K-2d.yaml  910K.yaml  910k.yaml  single-layer.yaml  small.yaml
reason_net/data/: data.py  data_gen.py
reason_net/data/configs/: default.yaml
tests/: data-test.txt  test_llama.py  test_run.py
tests/data-test/: chunk_0.txt  chunk_1.txt
tests/data-test/train/: chunk_0.txt  chunk_1.txt  chunk_10.txt  chunk_11.txt  chunk_12.txt  chunk_13.txt  chunk_14.txt  chunk_15.txt  chunk_16.txt  chunk_17.txt  chunk_2.txt  chunk_3.txt  chunk_4.txt  chunk_5.txt  chunk_6.txt  chunk_7.txt  chunk_8.txt  chunk_9.txt
tests/data-test/val/: chunk_0.txt  chunk_1.txt
